stable, light version

--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,10 @@
-node_modules
-dist
-coverage
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-*.pyw
-*.pyz
-*.pyzw
-*.ipynb_checkpoints
-*.log
-*.tmp
-*.tmp.*
-*.swp
-*.bak
-*.cache
-*.project
-*.pydevproject
-*.DS_Store
-*.db
-*.sqlite3
-*.sqlite
-*.sql
-*.cql
-*.sqlite3-journal
-*.idea
-*.vscode
-*.venv
-*venv
-*.rdb
+.idea/
+.vscode/
+.venv*/
+venv*/
+__pycache__/
+dist/
+.coverage*
+htmlcov/
+.tox/
+docs/_build/
